# agent-skills-framework

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile.dev  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  errors.py
backend/app/auth/: ldap_client.py  rbac.py  service.py
backend/app/core/: config.py  envelope.py  logging.py  security.py
backend/app/db/: base.py  seed.py  seed_marketplace.py  seed_taxonomy.py  session.py
backend/app/evals/: agent.py  base.py  cost.py  deep.py  documentation.py  governance.py  grade.py  performance.py  quality.py  security.py  supervisor.py
backend/app/events/: bus.py  types.py
backend/app/graph/: client.py  indexes.py  ontology.py  vector.py
backend/app/llm/: openrouter.py  provider.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  eval_run.py  marketplace.py  notification.py  organization.py  permission.py  role.py  session.py  skill_version.py  usage_event.py  user.py
backend/app/okf/: canonical.py  concept.py  eval_cases.py  linker.py  models.py  parser.py
backend/app/repositories/: api_key_repo.py  audit_repo.py  concept_graph_repo.py  eval_run_repo.py  marketplace_repo.py  okf_graph_repo.py  skill_graph_repo.py  taxonomy_repo.py  user_repo.py  workspace_graph_repo.py
backend/app/schemas/: auth.py  common.py  concept.py  knowledge.py  marketplace.py  skill.py  taxonomy.py  workspace.py
backend/app/services/: analytics_service.py  api_key_service.py  audit_service.py  concept_service.py  eval_history.py  index_service.py  knowledge_service.py  marketplace_service.py  okf_service.py  skill_service.py  taxonomy_service.py  workspace_service.py
backend/app/storage/: paths.py  repo.py
backend/app/tasks/: celery_app.py  embedding_tasks.py  graph_tasks.py  okf_tasks.py  reindex_tasks.py
backend/migrations/: env.py
backend/migrations/versions/: a1b2c3d4e5f6_usage_events_api_key_id.py  a5e6f7a8b9c0_listing_clones.py  ba15738ac1a2_initial_schema.py  c1a2b3d4e5f6_phase3_marketplace_eval_runs.py  d2b3c4e5f6a7_api_keys_usage_events.py  e3c4d5f6a7b8_skill_versions_and_listing_meta.py  f4d5e6f7a8b9_listing_capabilities_sources.py
backend/scripts/: build_sdk.py  clean_test_listings.py
backend/tests/: conftest.py
backend/tests/graph/: test_okf_graph.py  test_skill_graph.py  test_workspace_graph.py
backend/tests/integration/: conftest.py  test_api.py  test_api_keys_sdk.py  test_concept_hierarchy.py  test_concept_references.py  test_concept_service.py  test_concepts_api.py  test_edge_cases_task15.py  test_eval_supervisor.py  test_index_projection.py  test_marketplace_clone.py  test_marketplace_facets.py  test_marketplace_insights.py  test_marketplace_pagination.py  test_marketplace_seed.py  test_per_key_usage.py  test_public_marketplace.py  test_sdk_download.py  test_skill_stats.py  test_skill_versioning.py  test_taxonomy_api.py  test_taxonomy_graph.py  (+2 more)
cli/: pyproject.toml
cli/src/: main.py
cli/tests/: test_cli.py
sdk/python/: README.md  pyproject.toml
sdks/python/: pyproject.toml
(+376 files in other folders)
