[project]
name = "eakso"
version = "0.1.0"
description = "EAKSO SDK — consume marketplace skills in your own LLM calls."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eakso"]
